2005-04-30  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mem.c: Show how to create EXIF data.
	* README: New section USAGE.

2005-04-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data-type.h: New
	* libexif/*: Lots of changes to make it possible to validate data against
	the specification.

2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_load_data_content): Add a special case.

2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_load_data_content): Better check for 
	validity of tags.

2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Some day, we'll get this right.

2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.h
	* libexif/exif-content.h: New convenience functions/macros.

2005-04-27  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.ac: AGE = 1
	* libexif/exif-entry.c (exif_entry_fix): Add a break to avoid unnecessary
	checks.

2005-04-26  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Leave ' ' untouched, too.

2005-04-26  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.[c,h] (exif_tag_[name,title,description]_in_ifd): New.

2005-04-25  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_entry_fix): '\0...' as USER_COMMENT is ok, too.

2005-04-25  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Make it compile again.

2005-04-24  Lutz Mueller <lutz@users.sourceforge.net>

	* exif-data.[c,h] (exif_data_option_get_[name,description]),
	(exif_data_[set,unset]_option): New
	* exif-tag.[c,h]: EXIF_TAG_GAMMA: New.
	* exif-entry.c: (exif_entry_fix) Accept empty entries.

2005-04-15  Lutz Mueller <lutz@users.sourceforge.net>

	Submitted by Hongli Lai <h.lai@chello.nl>:

	* configure.ac: CURRENT needs only to be increased on changes or 
	  removals, not additions.
